--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.2.tar.gz",
     "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.2.tar.gz",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "@types/react": "^16.9.19",
+    "@types/react-native": "^0.61.12"
   },
   "private": true
 }
