--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.2.tar.gz",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-safe-area-context": "~0.3.6",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0",
     "@types/react": "^16.9.19",
-    "@types/react-native": "^0.61.12"
+    "@types/react-native": "^0.61.12",
+    "babel-preset-expo": "^6.0.0"
   },
   "private": true
 }
