--- a/package.json
+++ b/package.json
@@ -11,20 +11,19 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "expo": "^35.0.0",
+    "html-entities": "^1.2.1",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.2.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-safe-area-context": "~0.3.6",
-    "react-native-screens": "~1.0.0-alpha.23",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
-    "typescript": "^3.7.5"
+    "react-native-screens": "~1.0.0-alpha.23"
   },
   "devDependencies": {
     "@types/react": "^16.9.19",
     "@types/react-native": "^0.61.12",
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "typescript": "^3.7.5"
   },
   "private": true
 }
